[package]
name = "repl-check"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
lazy_static = "1.4.0"
nom = "7.1.3"
pandoc_ast = "0.8.4"
rand = "0.8.5"
regex = "1.8.3"
rexpect = "0.5.0"
thiserror = "1.0.40"

[dev-dependencies]
indoc = "2.0.1"
